--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".CadastroActivity">
-        </activity>
+        <activity android:name=".CadastroActivity"></activity>
+        <activity android:name=".TarefaActivity"></activity>
     </application>
 
 </manifest>
