--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,13 @@
         <activity android:name=".PrincipalActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CadastroActivity"></activity>
-        <activity android:name=".TarefaActivity"></activity>
+        <activity android:name=".CadastroActivity" />
+        <activity android:name=".TarefaActivity" />
+        <activity android:name=".ProgressoActivity"></activity>
     </application>
 
 </manifest>
